--- a/app/currency/templates/includes/navbar.html
+++ b/app/currency/templates/includes/navbar.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -9,11 +8,8 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="navbar-brand" href="#">
-                <img src="{% static 'currency.png' %}"
-                     height="60"
-                     alt="MDB Logo"
-                     loading="lazy" />
+        <a class="navbar-brand">
+                <img src="{% static 'currency.png' %}" height="60" alt="Currency Logo" loading="lazy" />
         </a>
 
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -33,7 +29,7 @@
             </ul>
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">Account
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -49,7 +45,7 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">Other
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
